bug still visible on mobile only

--- a/styles/pages/_thisweek.scss
+++ b/styles/pages/_thisweek.scss
@@ -48,7 +48,6 @@
   img {
     // border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     max-height: 400px;
-    max-width: 100%;
     overflow: hidden;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
@@ -60,6 +59,7 @@
   
   width: fit-content;
   height: auto;
+  
   //max-width: 100%;
   //border: 1px solid #333333;
   //border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
