--- a/styles/style.css
+++ b/styles/style.css
@@ -505,7 +505,6 @@
 
 .thisweek-image img {
   max-height: 400px;
-  max-width: 100%;
   overflow: hidden;
   -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
           box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
